2003-10-23  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* doc/dev_desc.txt: New file.
	* src/jtag.h:
	* src/jtagio.cc:
	Make the device description arrays into a structures.

2003-10-20  Theodore A. Roth  <troth@openavr.org>
[Thanks to Dean Ferreyra <dferreyra@igc.org>]

	* configure.ac (AC_INIT): Bump version.
	* src/main.cc: Fix to allow erasing the device as a single operation.

2003-09-25  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* doc/Makefile.am (EXTRA_DIST): Add the .txt files.
	* doc/README.cygwin: New file, from Eric Weddington.

2003-09-18  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* avarice.spec.in: Add man pages.

2003-09-18  Theodore A. Roth  <troth@openavr.org>
[Thanks to Amedee Louis Beaudoin <deoxy@u.washington.edu>]

	* src/jtagrw.cc (jtagWriteFuses): Enter programming mode before writing
	and exit program mode after reading.
	(jtagWriteLockBits): Ditto.

2003-08-25  David Gay  <dgay@barnowl.research.intel-research.net>

	* configure.ac: bump version
	* src/jtagprog.cc: work around cygwin gcc (3.2.3) bug with
	large stack allocated locals by making them static

2003-08-21  David Gay  <dgay@barnowl.research.intel-research.net>

	* doc/ice-insight.1: new file, ice-insight man page
	* doc/ice-gdb.1: new file, ice-gdb man page
	* doc/Makefile.am: new file
	* Makefile.am (SUBDIRS): make doc subdir
	* configure.ac: Bump revision, add doc Makefile

2003-08-20  Theodore A. Roth  <troth@openavr.org>

	* src/jtagrun.cc (jtagContinue): Add debug output to show what the 
	jtag box returned, especially the break status register.

2003-08-19  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* src/jtagprog.cc (get_section_addr): Fix to allow programming of upper
	64k of flash.

2003-08-18  David Gay  <dgay@barnowl.research.intel-research.net>

	* src/main.cc (main): Add missing --file option for getopt